ingress-traefix.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-svc
spec:
  type: ClusterIP
  selector:
    app: azure-vote-front
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: azure-vote-svc
                port:
                  number: 80
